--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
 
         <a class="sidebar-item">
             <div class="sidebar-icon">
-                <i class="fa fa-file-o"></i>
+                <i class="fa fa-files-o"></i>
             </div>
 
             <div class="sidebar-content"> 
