--- a/src/styles.css
+++ b/src/styles.css
@@ -204,3 +204,5 @@ based on angular-toastr css https://github.com/Foxandxss/angular-toastr/blob/cb5
       width: 25em;
     }
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
