--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="dashboard-content">
-            
+            <app-my-files-section></app-my-files-section>            
         </div>
 
     </div>
