--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-container">
 
     <div class="navbar-logo">
-        <h3>OpenPDF 📕</h3>        
+        <h3>FileBox.me 📦</h3>        
     </div>
     
     <div class="navbar-items">
