--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 
         <div class="dashboard-upper-navbar-content">
             <button class="btn">
-                <i class="fa fa-arrow-circle-o-down"></i>
+                <i class="fa fa-question-circle"></i>
             </button>
         </div>
 
@@ -22,7 +22,7 @@
         </div>
 
         <div class="dashboard-content">
-            <app-my-files-section></app-my-files-section>            
+            <router-outlet></router-outlet>            
         </div>
 
     </div>
