--- a/src/app/components/login-form/login-form.component.css
+++ b/src/app/components/login-form/login-form.component.css
@@ -24,18 +24,18 @@
 }
 
 .login-form input:focus {
-    border-color: rgb(65, 7, 65);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(173, 41, 59, 0.5);
+    border-color: rgb(60, 151, 106);
+    box-shadow: 0px 1px 1px #73A2AC inset, 0px 0px 8px #73A2AC;
 }
 
 .login-form button {
     width:100%;
     color:white;
-    background-color: rgb(73, 117, 168);
+    background-color: #0B5D69;
     border-radius: 3px;
 }
 
 .login-form button:hover {
-    background-color: rgb(40, 90, 148);
+    background-color: #FBAA82;
     border-radius: 5px;
 }
