--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -3,7 +3,7 @@
     height:100%;
     display: flex;
     flex-direction: column;
-    background-color: rgb(81, 134, 196);
+    background-color: #0B5D69;
 }
 
 
@@ -28,7 +28,7 @@
 }
 
 .sidebar-item:hover{
-    background-color: rgb(50, 103, 163);
+    background-color: #FBAA82;
 }
 
 .sidebar-icon {
