Add: PDF files section and action card

--- a/src/app/components/dashboard-default-section/dashboard-default-section.component.html
+++ b/src/app/components/dashboard-default-section/dashboard-default-section.component.html
@@ -1,5 +1,5 @@
 <div class='w-100 h-50 d-flex flex-row justify-content-center align-items-center' style='color:#0B5D69;'>
     <span>
-       <h1> Welcome to FileBox.me 📦</h1>
+       <h1> Welcome to FileBox.me 🗃️</h1>
     </span>
 </div>
