--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
 
         </a>
 
-        <a class="sidebar-item">
+        <a routerLink='pdf-files' class="sidebar-item">
             <div class="sidebar-icon">
                 <i class="fa fa-file-pdf-o"></i>
             </div>
